# verus-find

./: Cargo.toml  README.md  examples.rs
.github/workflows/: ci.yml
src/: main.rs  matching.rs  range_tree.rs
src/matching/: expr.rs  mod.rs  other.rs  test.rs
verus-find/: Cargo.toml  LICENSE
verus-find/src/: main.rs
verus-find/src/matching/: expr.rs  fmt.rs  mod.rs  other.rs  test.rs
web/: .gitignore  Cargo.toml  README.md  build.rs  guide.html  howto.html  index.html  rust-toolchain.toml  style.css
web/src/: lib.rs  main.rs
