[package]
name = "verus-find"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to search for Verus functions and lemmas"
homepage = "https://github.com/matthias-brun/verus-find"
repository = "https://github.com/matthias-brun/verus-find"
readme = "../README.md"
keywords = ["verus"]
categories = ["development-tools"]

[features]
test_vstd = []

[dependencies]
proc-macro2 = { version = "*", features = ["span-locations"] }
clap = { version = "*", features = [ "derive", "env" ] }
itertools = "*"

[dependencies.syn_verus]
git = "https://github.com/verus-lang/verus"
rev = "98768b15c176566a5d8b35cbfe6c8d7bc1f0073c"
features = ["full", "extra-traits"]

[dev-dependencies]
walkdir = "2.5" # for test_vstd
