[package]
name = "verus-find"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to search for Verus functions and lemmas"
homepage = "https://github.com/matthias-brun/verus-find"
repository = "https://github.com/matthias-brun/verus-find"
readme = "../README.md"
keywords = ["verus"]
categories = ["development-tools"]

[features]
test_vstd = []

[dependencies]
proc-macro2 = { version = "*", features = ["span-locations"] }
clap = { version = "*", features = [ "derive", "env" ] }
itertools = "*"

[dependencies.verus_syn]
git = "https://github.com/verus-lang/verus"
rev = "bf8e97e852e95f277333ecd7c6515d5c1adfbf0c"
features = ["full", "extra-traits"]

[dev-dependencies]
walkdir = "2.5" # for test_vstd
