[package]
name = "verus-find"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to search for Verus functions and lemmas"
homepage = "https://github.com/matthias-brun/verus-find"
repository = "https://github.com/matthias-brun/verus-find"
readme = "../README.md"
keywords = ["verus"]
categories = ["development-tools"]

[features]
test_vstd = []

[dependencies]
proc-macro2 = { version = "*", features = ["span-locations"] }
clap = { version = "*", features = [ "derive", "env" ] }
itertools = "*"

[dependencies.verus_syn]
git = "https://github.com/verus-lang/verus"
rev = "192e2b5442d313f74da08db186c5b72baf0ca99a"
features = ["full", "extra-traits"]

[dev-dependencies]
walkdir = "2.5" # for test_vstd
