[package]
name = "verus_find_web"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "*", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
verus-find = { path = "../verus-find" }

[dependencies.syn_verus]
git = "https://github.com/verus-lang/verus"
rev = "1b16620e48b3ddd7655732fcd177e677088f6b2d"
features = ["full", "extra-traits"]

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"

[build-dependencies]
walkdir = "2.5"
